# vulkanmon

./: .gitignore  ASSET_LOADING_ARCHITECTURE_PLAN.md  BUILD.md  CAMERA_ARCHITECTURE_CLEANUP_PLAN.md  CAMERA_CONFIG_REFACTOR_PLAN.md  CAMERA_UNIFICATION_PLAN.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_DOCUMENTATION_AUDIT.md  CODE_DOCUMENTATION_CLEANUP_COMPLETED.md  CONFIG_SYSTEM_IMPLEMENTATION_PLAN.md  CORRECTED_STRATEGIC_ROADMAP.md  CREATURE_DETECTION_IMPLEMENTATION_PLAN.md  CREATURE_DETECTION_TESTING_PLAN.md  CURRENT_STATUS.md  DEVELOPMENT_PHILOSOPHY.md  DOCUMENTATION_ACCURACY_AUDIT.md  DOCUMENTATION_CLEANUP_SUMMARY.md  DOXYGEN_IMPLEMENTATION_PLAN.md  DOXYGEN_SETUP_COMPLETE.md  Doxyfile  ECS_INSPECTOR.md  INPUT_HANDLER_ECS_INTEGRATION_PLAN.md  INSTANCE_BUFFER_ANALYSIS.md  INSTANCE_BUFFER_BUG_FIXES.md  INSTANCE_BUFFER_CODE_REVIEW.md  INSTANCE_BUFFER_VALIDATION.md  JOLT_CRASH_DEBUG_SESSION.md  JOLT_PHYSICS_INTEGRATION_TODO.md  LICENSE  MEMORY_MANAGEMENT.md  MILESTONE_COMPLETE.md  OPTION_A_CREATURE_COMPONENT_INSPECTOR.md  OPTION_B_REVISED_IMPLEMENTATION_PLAN.md  OPTION_B_RE_ENABLE_DISABLED_TESTS.md  OPTION_C_COMPREHENSIVE_INSPECTOR_TESTS.md  OPTION_D_TEST_COVERAGE_ANALYSIS.md  PERFORMANCE_BASELINE.md  PERFORMANCE_OPTIMIZATION_TODO.md  (+35 more)
.github/workflows/: build-and-test.yml  c-cpp.yml  cmake-single-platform.yml  pytest.yml
assets/: README.md
docs/: ARCHITECTURE_DECISION_ENGINE_VS_GAME.md  ARCHITECTURE_OVERVIEW.md  BUILD_DEPLOY_STRATEGY.md  CLASS_EXTRACTION_STRATEGY.md  CORE_SYSTEMS.md  CPP_PYTHON_DELINEATION.md  CREATURE_RENDER_LOGGING_FIX.md  CREATURE_STRESS_TEST_PLAN.md  CROSS_PLATFORM.md  CROSS_PLATFORM_BUILD_GUIDE.md  CURRENT_ARCHITECTURE_OVERVIEW.md  DEBUG_SERVER.md  DEVELOPMENT_PHILOSOPHY.md  DEVELOPMENT_WORKFLOW.md  ECS_DESIGN.md  FRAMEWORK_ARCHITECTURE.md  GITHUB_WORKFLOWS.md  GPU_INSTANCING_IMPLEMENTATION_PLAN.md  INPUTHANDLER_TEST_FIX_PLAN.md  INPUT_INTERACTION_TESTING_STRATEGY.md  LIBRARY_INTEGRATION.md  MAPPED_BUFFER_INTEGRATION_PLAN.md  MULTI_DESCRIPTOR_SET_REFACTOR.md  NEW_ARCHITECTURE_DESIGN.md  PERFORMANCE_OPTIMIZATION_PLAN.md  PERFORMANCE_REGRESSION_GUIDE.md  PERFORMANCE_TEST_PLAN.md  PHASE2.5_DESIGN.md  PHASE2_PLAN.md  PHASE4_PLAN.md  PHASE_1_COMPLETION_REPORT.md  PHASE_4_2_LIGHTING_REFINEMENT_PLAN.md  PHASE_4_TESTING_COMPLETION_PLAN.md  PHASE_5_2_ARCHITECTURE_REFACTORING.md  PHASE_5_PLAN.md  PHASE_7_1_PHYSICS_TODOS.md  PHASE_7_2_TERRAIN_TODOS.md  PHASE_7_3_AUDIO_TODOS.md  PHASE_7_4_ANIMATION_TODOS.md  PHASE_7_IMPLEMENTATION_SESSION.md  (+36 more)
docs/archive/: CURRENT_TEST_STATUS.md  ECS_INSPECTOR.md  PATH_TO_GREEN.md  PHASE_6_1_MILESTONE.md  PHASE_6_2_IMPLEMENTATION_GUIDE.md  PHASE_6_3_CLEANUP_PLAN.md
docs/opus_chats/: ai_framegen_documentation.md  blender-pokemon-pipeline.md  creature-system-guide.md  dual_renderer_part1.md  dual_renderer_part2.md  dual_renderer_part3.md  dual_renderer_part4.md  game_rendering_alternatives.html  physics-integration-guide.md  pokemon_mvp_roadmap.md  pokemon_photorealistic_dev_doc.md  rendering_comparison.html  spatial-system-guide.md  ui_rendering_guide.md  vulkanmon-cython-decision.md  vulkanmon-cython-integration-plan.md  vulkanmon-review.md  vulkanmon_pointer_fixes.md  world-streaming-guide.md
scripts/: run_coverage.bat  run_coverage.sh
shaders/: frag.spv  instanced.frag  instanced.vert  instanced_frag.spv  instanced_vert.spv  triangle.frag  triangle.vert  triangle_frag.spv  triangle_vert.spv  vert.spv
src/: Application.cpp  AssetManager.cpp  AssetManager.h  Camera.cpp  InputHandler.cpp  InputHandler.h  LightingSystem.cpp  LightingSystem.h  Logger.cpp  Logger.h  MaterialSystem.cpp  MaterialSystem.h  ModelLoader.cpp  ModelLoader.h  ResourceManager.cpp  ResourceManager.h  Utils.h  VulkanRenderer.cpp  VulkanRenderer.h  Window.cpp  main.cpp
src/components/: Camera.h  CameraFollowComponent.h  CharacterControllerComponent.h  CollisionComponent.h  CreaturePhysicsComponent.h  ProjectileComponent.h  Renderable.h  RigidBodyComponent.h  SpatialComponent.h  Transform.h
src/config/: CameraConfig.h
src/core/: Application.cpp  Application.h  ApplicationInputs.cpp  ApplicationSetup.cpp  Application_backup.cpp  Camera.h  ComponentArray.h  Entity.h  EntityManager.h  InputHandler.cpp  InputHandler.h  OwnershipModel.h  System.h  SystemImpl.h  SystemManager.h  Window.cpp  Window.h  World.cpp  World.h
src/debug/: ECSInspector.cpp  ECSInspector.h  SpatialStressTest.cpp  SpatialStressTest.h  debug_server.cpp  debug_server.h  frame_capture.cpp  frame_capture.h
src/examples/: ECS_Example.cpp
src/game/: CreatureDetectionSystem.h  GrassSystem.h  PlayerController.h
src/io/: AssetManager.cpp  AssetManager.h  ModelLoader.cpp  ModelLoader.h
src/materials/: ProjectileMaterials.cpp  ProjectileMaterials.h
src/rendering/: MappedBuffer.h  ResourceManager.h  VulkanRenderer.cpp  VulkanRenderer.h
src/spatial/: LayerMask.cpp  LayerMask.h  (+6 more)
tests/: PHASE2_TESTING.md  README.md  conftest.py  pytest.ini  requirements.txt  test_build_system.py  test_camera_movement.py  test_depth_buffer.py  test_file_structure.py  test_hot_reload.py  test_integration.py  test_texture_loading.py  test_ubo_functionality.py  test_vulkan_runtime.py
tests_cpp/: CMakeLists.txt  README.md  RUNNING_TESTS.md  main.cpp  test_Application.cpp  test_AssetManager.cpp  test_Camera.cpp  test_DebugServer.cpp  test_ECSInspector.cpp  test_FrameCapture.cpp  test_InputHandler.cpp  test_LightingSystem.cpp  test_Logger.cpp  test_MaterialSystem.cpp  test_ModelLoader.cpp  test_ProjectileSystem.cpp  test_ResourceManager.cpp  test_Utils.cpp  test_VulkanRenderer.cpp  test_Window.cpp  test_WindowResize.cpp  test_WorldConfig.cpp  test_ecs.cpp  test_ecs_integration.cpp
tests_cpp/fixtures/: TestHelpers.cpp  TestHelpers.h  VulkanTestFixture.cpp  VulkanTestFixture.h
tests_cpp/mocks/: MockWorld.h
tests_cpp/performance/: test_CreatureDetectionRegression.cpp  test_PerformanceRegression.cpp
tests_cpp/physics/: test_PhysicsBlockers.cpp  test_PhysicsComponents.cpp  test_PhysicsSystem.cpp
tests_cpp/spatial/: bench_SpatialSystem.cpp  test_SpatialPerformance.cpp  test_SpatialSystem.cpp
(+17 files in other folders)
